--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body>
     <div id="wrap">   
       <header id="header"></header>
+      <main>
       <div id="main" class="main-wrap mainpage">
 
           <section class="slidewrap vdo-top con1">
@@ -45,6 +46,7 @@
 
  
       </div>
+      </main>
       <footer id="footer"></footer>
     </div>
 
