--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header id="header"></header>
       <main>
       <div id="main" class="main-wrap mainpage">
-
+        <div><img src="./img/main_img_01.jpg"></div>
           <section class="slidewrap vdo-top con1">
             <div class="wpc">
               <div class="titwrap" id="titwrap">
