--- a/sub1_1.html
+++ b/sub1_1.html
@@ -41,7 +41,7 @@
         
       </div>
 
-      <div id="main" class="main-wrap subpage philopage">
+      <div id="main" class="main-wrap subpage sub1_1">
         <div class="maintitwrap wpc">
           <h2 class="maintit">연세리안의 철학</h2>
         </div>
