--- a/sub1_2.html
+++ b/sub1_2.html
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <div id="main" class="main-wrap subpage intropage">
+        <div id="main" class="main-wrap subpage sub1_2 intropage">
 
           <div class="maintitwrap wpc">
             <h2 class="maintit">의료진 소개</h2>
