--- a/sub1_3.html
+++ b/sub1_3.html
@@ -35,7 +35,7 @@
           </div>
         </div>
 
-        <div id="main" class="main-wrap subpage mappage">
+        <div id="main" class="main-wrap subpage sub1_3">
           <div class="maintitwrap centertxt wpc">
             <h2 class="maintit mb30">찾아오시는길 / 연락처</h2>
             <h5 class="fsize20">진료 시간과 오시는길, 노원연세리안치과와 소통하실수 있는 공간을 안내드립니다.</h5>
