--- a/sub2_1.html
+++ b/sub2_1.html
@@ -37,7 +37,7 @@
           </div>
         </div>
 
-        <div id="main" class="main-wrap subpage inareapage">
+        <div id="main" class="main-wrap subpage sub2_1">
           <div class="maintitwrap centertxt wpc">
             <h2 class="maintit">내부공간 둘러보기</h2>
           </div>
