--- a/sub2_2.html
+++ b/sub2_2.html
@@ -32,12 +32,12 @@
           <div class="wpc flexwrap fnlnb">
             <div class="lnbtit flex_hcenter"><h1 class="fnlnbtit"></h1></div>
             <div class="lnb">
-              <ul class="sub2 fnsubmenu" data-cur="sub2_3"></ul>
+              <ul class="sub2 fnsubmenu" data-cur="sub2_2"></ul>
             </div>
           </div>
         </div>
 
-        <div id="main" class="main-wrap subpage cleanpage">
+        <div id="main" class="main-wrap subpage sub2_2">
           <div class="maintitwrap centertxt mbcon50 wpc">
             <h2 class="maintit mb30">연세리안 멸균 소독시스템</h2>
             <div class="txt">
