--- a/sub3_1.html
+++ b/sub3_1.html
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <div id="main" class="main-wrap subpage specialpage">
+        <div id="main" class="main-wrap subpage sub3_1">
           <div class="maintitwrap">
             <h2 class="maintit">치주과 전문의의 특별한 임플란트</h2>
           </div>  
