--- a/sub3_2.html
+++ b/sub3_2.html
@@ -36,16 +36,18 @@
           </div>
         </div>
 
-        <div id="main" class="main-wrap subpage navipage">
+        <div id="main" class="main-wrap subpage sub3_2">
+
           <div class="maintitwrap">
             <h2 class="maintit">네비게이션 임플란트</h2>
           </div>  
-          <section class="con1 mbcon">
-            <div class="semiwidegallery">
+          
+          <section class="con1">
+            <div class="semiwidegallery flex">
               <div class="left"><div class="imgwrap"><img src="./img/sub3/sub3_2_img01_1_2.jpg""></div></div>
               <div class="right">
                 <div class="txtwrap flex_vcenter">
-                  <div class="tit titwrap"><h3><span class="subcolor_g">네비게이션 임플란트</span>란??</h3></div>
+                  <div class="tit titwrap"><h3><span class="subcolor_g">네비게이션 임플란트</span>란?</h3></div>
                   <div class="txt ">
                     <p>3D CT 촬영을 통해 컴퓨터로 모의 수술 시뮬레이션을 한 뒤, 
                       환자 맞춤형 수술형 가이드를 제작하고, 수술 시 구강에 장착하여 
@@ -57,23 +59,23 @@
               </div>
             </div> 
           </section>
-          <section class="con2 pbt100 mbcon">
+          <section class="con2 pbt150 mbcon">
             <div class="winside">
               <div class="banner column3 mbcon gap20">
                 <div class="col">
-                    <div class="icon"></div>
+                    <div class="iconwrap"><p class="icon"></p></div>
                     <h5 class="subcolor_g">빠르고<br>정확한 수술</h5>
                     <div class="txt">0.1mm의 오차 없이 예상한 위치에 식립</div>
                 </div>
                 <div class="col">
-                  <div class="icon"></div>
-                  <h5 class="subcolor_g">빠르고<br>정확한 수술</h5>
-                  <div class="txt">0.1mm의 오차 없이 예상한 위치에 식립</div>
+                  <div class="iconwrap"><p class="icon"></p></div>
+                  <h5 class="subcolor_g">편안한<br>임플란트</h5>
+                  <div class="txt">최소 절개로 출혈, 부종, 통증의 최소화 전신 질환이 있는 고령환자분께 유리합니다</div>
                 </div>
                 <div class="col">
-                  <div class="icon"></div>
-                  <h5 class="subcolor_g">빠르고<br>정확한 수술</h5>
-                  <div class="txt">0.1mm의 오차 없이 예상한 위치에 식립</div>
+                  <div class="iconwrap"><p class="icon"></p></div>
+                  <h5 class="subcolor_g">안정성</h5>
+                  <div class="txt">예상되는 최적의 위치에 식립함으로써 임플란트의 안정성 확보</div>
                </div>
               </div>
 
@@ -87,7 +89,7 @@
                     <div>130분의 수술시간<br>(1, 2차 수술, 본뜨기,임시보철 기준)</div>
                   </div>
                   <div class="col right">
-                    <div class="th">네비게이션 임플란트</div>
+                    <div class="th mark">네비게이션 임플란트</div>
                     <div>잇몸 절개 및 봉합 <strong>X</strong></div>
                     <div>출혈과 붓기가 <strong>최소화</strong></div>
                     <div>약 <strong>1 - 7일</strong> 소요하여 회복</div>
