--- a/sub3_7.html
+++ b/sub3_7.html
@@ -49,8 +49,8 @@
                   <div class="tit titwrap"><h3><span class="subcolor_g">임플란트 재수술</span>이란?</h3></div>
                   <div class="txt">
                     <p class="mb10">임플란트를 사용하다보면 염증 또는 파절에 의해 제거하고 다시 식립해야 하는 경우가 있습니다. </p>
-                    <p class="mb10">모든 재수술이 그렇듯 문제가 된 것을 제거하고 새로운 임플란트 심는 것은 처음 식립하는 것보다 까다롭기 때문에 전문성과 기술력이 필요합니다. </p>
-                    <p>대학 병원급 임플란트 재수술이 가능한 연세리안치과와 상담하세요. </p>
+                    <p class="mb10">모든 재수술이 그렇듯 문제가 된 것을 제거하고 새로운 임플란트 심는 것은 처음 식립하는 것보다 까다롭기 때문에 <strong>전문성</strong>과 <strong>기술력</strong>이 필요합니다. </p>
+                    <p><strong>대학 병원급 임플란트 재수술이 가능한 연세리안치과와 상담하세요.</strong></p>
                   </div>
                 </div>
               </div>
@@ -79,7 +79,7 @@
                     </div>
                   </div>  
                   
-                  <div class="hr_green mt50" ></div>
+                  <div class="hr_green mt50 mbcon50" ></div>
 
                   <div class="list column3 gapborder con3_2">
                     <div class="col">
