--- a/sub4.html
+++ b/sub4.html
@@ -30,9 +30,9 @@
         <div class="maintop top_sub4">
           <div class="wpc flexwrap fnlnb">
             <div class="lnbtit flex_hcenter"><h1 class="fnlnbtit"></h1></div>
-            <div class="lnb">
+            <!-- <div class="lnb">
               <ul class="sub4 fnsubmenu" data-cur="sub4_1"></ul>
-            </div>
+            </div> -->
           </div>
         </div>
 
