--- a/sub7_1.html
+++ b/sub7_1.html
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <div id="main" class="main-wrap subpage sub7_1">
+        <div id="main" class="main-wrap subpage sub7_1 boardpage">
 
           <div class="maintitwrap">
             <h2 class="maintit">온라인상담</h2>
