--- a/index.html
+++ b/index.html
@@ -21,30 +21,373 @@
       <link rel="stylesheet" type="text/css" href="./css/common.css"> 
       <!-- local test 끝 -->
 
+      <!-- only main -->
+      <link rel="stylesheet" type="text/css" href="./css/main.css">  
+
   </head>
   <body>
     <div id="wrap">   
       <header id="header"></header>
       <main>
       <div id="main" class="main-wrap mainpage">
-        <div><img src="./img/main_img_01.jpg"></div>
-          <section class="slidewrap vdo-top con1">
-            <div class="wpc">
-              <div class="titwrap" id="titwrap">
-                <div class="subtit ani trans">Luxury Glamping Raffine</div>
-                <div class="logo_font">
-                  <div class="line"><p class="content_typing ani">Luxury glamping Raffine</p></div>
-                  <div class="line"><p class="content_typing ani">are great for feeling nature.</p></div>
+        <section class="slidewrap_main con1">
+          <div class="slider lazy slider_d2">
+            <div>
+              <div><img src="./img/gallery/main/top/1.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/2.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/3.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/4.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/5.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/6.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/7.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/8.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/9.jpg"></div>
+            </div>
+            <div>
+              <div><img src="./img/gallery/main/top/10.jpg"></div>
+            </div>
+          </div>
+          <div class="titwrap" id="titwrap">
+            <h3 class="subtit">ABOUT US</h3>
+            <h4>Yonseirian</h4>
+            <div class="txt">
+              <p class="txt1">연세대학교 치의학 박사 & 치주과 전문의 & 심미확회 인정의 대표원장이 꼼꼼하게 진료합니다.</p>
+              <p>[ Re: 安 ], 리안은 처음의 편안한 상태로 돌아간다는 뜻으로 아픈 곳이 없던 원래의 모습을 회복하는 공간입니다. </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="con2 pb100">
+          <div class="cont_tit mbcon50">당신이 다시(Re:) 빛날 시간</div>
+
+          <div class="content wpc flex_right">
+            <div class="subtitwrap">
+              <h3>yonseirian Philosophy</h3>
+              <h4>Re: <span>安</span></h4>
+            </div>
+
+            <!-- 우측  이미지 영역 슬라이드 -->
+            <div class="slide1wrap flex_vcenter">
+              <div class="slider slider-nav slider_d2">
+                <div class="slide_item">
+                  <div class="flex">
+                    <div class="num">1</div>
+                    <div class="flex_vcenter">
+                      <p class="tit">Respect [환자에 대한 존중]</p>
+                      <div class="txt">
+                        <p>환자의 건강하고 행복할 권리를 존중합니다. </p>
+                        <p>환자분들의 통증과 불편에 귀 기울여, 가장 편안한 방법으로 최선의 결과를 약속드립니다.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div> <!-- slide1 -->
+                <div class="slide_item">
+                  <div class="flex">
+                    <div class="num">2</div>
+                    <div class="flex_vcenter">
+                      <p class="tit">Reliable [ 신뢰 ]</p>
+                      <div class="txt">
+                        <p>진료는 환자와 의료진과의 약속입니다.</p>
+                        <p>치료는 의료진을 믿는 환자의 마음과 신의를 지키는 의료진의 조화가 가장 중요합니다.</p>
+                        <p>결코 필요 없는 치료를 상업적 목적으로 권하지 않고, </p>
+                        <p>병원을 믿고 치아를 맡기는 환자들의 믿음을 소중히 여기는 병원이 되겠습니다.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div><!-- slide2 -->
+                <div class="slide_item">
+                  <div class="flex">
+                    <div class="slide_txt flex_vcenter">
+                      <div class="flex">
+                        <div class="num">3</div>
+                        <div class="flex_vcenter">
+                          <p class="tit">Reference [ 근거 중심의 진료 ]</p>
+                          <div class="txt">
+                            <p>국내 5% 의 대학 병원 수련과정을 마친 전문의로서, </p>
+                            <p>근거 중심의 진료와 검증된 재료, 첨단 진료 장비를 통해 </p>
+                            <p>정확하고 안전한 진료를 시행합니다.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div><!-- slide3 -->
+                <div class="slide_item">
+                  <div class="flex">
+                    <div class="num">4</div>
+                    <div class="flex_vcenter">
+                      <p class="tit">Release [ 통증의 완화 ]</p>
+                      <div class="txt">
+                        <p>아프고 두려운 치과 치료이기에 연조직 마취제, 무통마취기, 아로마 테라피 등을 </p>
+                        <p>이용하여 편안하고 아프지 않은 진료를 제공합니다.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div><!-- slide4 -->
+                <div class="slide_item">
+                  <div class="flex">
+                    <div class="slide_txt flex_vcenter">
+                      <div class="flex">
+                        <div class="num">5</div>
+                        <div class="flex_vcenter">
+                          <p class="tit">Return [ 진정한 회복 ]</p>
+                          <div class="txt">
+                            <p>치과 치료는 치아로서만 끝나는 것이 아닌, </p>
+                            <p>잘 씹고 먹을 수 있는 즐거움, 환하게 웃을 수 있는 자신감, </p>
+                            <p>아름다운 미소로 우리 삶의 행복을 좌우합니다.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div><!-- slide5 -->
+              </div>
+            </div>
+
+            <!-- 좌측 텍스트 영역 슬라이드 -->
+            <div class="slide2wrap shape">
+              <div class="slider slider-for">
+                <div><img src="./img/gallery/main/philosophy/1.jpg"></div> <!-- slide1 -->
+                <div><img src="./img/gallery/main/philosophy/2.jpg"></div> <!-- slide2 -->
+                <div><img src="./img/gallery/main/philosophy/3.jpg"></div> <!-- slide3 -->
+                <div><img src="./img/gallery/main/philosophy/4.jpg"></div> <!-- slide4 -->
+                <div><img src="./img/gallery/main/philosophy/5.jpg"></div> <!-- slide5 -->
+              </div>
+            </div>
+
+          </div>
+        </section>
+
+        <section class="con3 mbcon">
+          <div class="wpc column4 gap">
+            <div class="col">
+              <div class="imgwrap"><img src="./img/main/main_img01_1.jpg" class="scrollon"></div>
+              <div class="txtwrap subcolor_p">
+                <p class="txt1 mb10"><strong>임플란트</strong> 클리닉</p>
+                <div class="txt2"><p>대학병원에서 전문적으로 수련을 받은 치주과 전문의는 치과의사 중 약 7%로서 임플란트 및 연조직 수술 등, 잇몸 치료에 특화된 치과의사입니다.</p>
                 </div>
               </div>
             </div>
-            <div class="slider lazyno">
-              <div>
-                <div><img src="./img/main_img_01.jpg"></div>
+            <div class="col">
+              <div class="imgwrap"><img src="./img/main/main_img01_2.jpg" class="scrollon delay1_3"></div>
+              <div class="txtwrap subcolor_p">
+                <p class="txt1 mb10"><strong>치주치료</strong> 클리닉</p>
+                <div class="txt2"><p>잇몸을 전문적으로 진단, 치료, 관리하는 치주과 전문의가 
+                  세심하고 체계적으로 당신의 잇몸을 케어해드립니다</p>
+                </div>
+              </div>
             </div>
-          </section>
+            <div class="col">
+              <div class="imgwrap"><img src="./img/main/main_img01_3.jpg" class="scrollon delay1_5"></div>
+              <div class="txtwrap subcolor_p">
+                <p class="txt1 mb10"><strong>심미치료</strong> 클리닉</p>
+                <div class="txt2"><p>건강한 잇몸 ( pink esthetic) 위에 손상되고 
+                  변색된 치아를 환하게 복원 (white esthetic) 하여 
+                  당신의 밝은 웃음을 다시 (Re:) 돌려드립니다.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="imgwrap"><img src="./img/main/main_img01_4.jpg" class="scrollon delay1_7"></div>
+              <div class="txtwrap subcolor_p">
+                <p class="txt1 mb10"><strong>자연치보존</strong> 클리닉</p>
+                <div class="txt2"><p>건강한 잇몸 ( pink esthetic) 위에 손상되고 
+                  변색된 치아를 환하게 복원 (white esthetic) 하여 
+                  당신의 밝은 웃음을 다시 (Re:) 돌려드립니다.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
- 
+        <section class="con4">
+          <div class="wpc">
+            <h3 class="mbcon50">연세리안치과 내부공간</h3>
+            <div class="flex_right">
+              <div class="slider lazy slide_d1">
+                <div class="slide_item imgwrap"><img src="./img/gallery/main/place/1.jpg"><div class="mark">#대기실</div></div>
+                <div class="slide_item imgwrap"><img src="./img/gallery/main/place/2.jpg"><div class="mark">#엑스레이</div></div>
+                <div class="slide_item imgwrap"><img src="./img/gallery/main/place/3.jpg"><div class="mark">#상담실</div></div>
+                <div class="slide_item imgwrap"><img src="./img/gallery/main/place/4.jpg"><div class="mark">#소독실</div></div>
+                <div class="slide_item imgwrap"><img src="./img/gallery/main/place/5.jpg"><div class="mark">#수술실</div></div>
+                <div class="slide_item imgwrap"><img src="./img/gallery/main/place/6.jpg"><div class="mark">#진료실</div></div>
+                <div class="slide_item imgwrap"><img src="./img/gallery/main/place/7.jpg"><div class="mark">#회복실</div></div>
+              </div> <!-- slider end  -->
+            </div>
+          </div>
+        </section> 
+
+        <section class="con5">
+          <div class="wpc">
+            <div class="flex gap">
+              <div class="col leftbox flex_right">
+                <div class="subtitwrap">
+                  <div class="txt1 flex">
+                    <p class="smtxt flex">대표원장</p><h3 class="txt nanummyeongbold">김유경</h3>
+                  </div>
+                  <div class="txt2 flex_hcenter"><span>치의학박사</span><i class="bar"></i><span>치주과전문의</span></div>
+                </div>
+              </div>
+              <div class="col rightbox flex_vcenter">
+                <div class="top flexwrap mb30">
+                  <div class="tit1 mb30">치과의사 중 치주과 전문의는 단 7% </div>
+                  <h3 class="tit nanummyeong">
+                    연세대학교 치의학 박사 & 치주과 전문의 & 심미확회 인정의
+                    대표원장이 꼼꼼하게 진료합니다.
+                  </h3>
+                </div>
+                <div class="mid mbcon50">
+                  <p>보건복지부 인증 치주과 전문의</p>
+                  <p>연세대학교 치과대학원 치의학 박사 졸업</p>
+                  <p>現) 연세대학교 치과대학 외래교수</p>
+                  <p>연세대학교 졸업</p>
+                  <p>국민건강보험공단 일산병원 인턴 수료</p>
+                  <p>연세대학교 신촌 세브란스 치과대학병원 레지던트 수료</p>
+                  <p>연세대학교 신촌 세브란스 치과대학병원 임플란트 클리닉 수료</p>
+                  <p>대한 치주과학회 정회원</p>
+                  <p>대한 임상치주과학회 정회원</p>
+                  <p>대한 심미치과학회 인정의</p>
+                  <p>대한 심미치과학회 정회원</p>
+                  <p>대한 턱관절교합학회 교합 아카데미 수료</p>
+                  <p>오스템 임플란트 임상지도의</p>
+                  <p>University of Pensylvenia Endodontic Master coursr 수료</p>
+                  <p>Osstem Prothodontic Master course 수료</p>
+                  <p>Kaya 임상 보철 세미나 수료</p>
+                  <p>International Team for lmplantology member</p>
+                  <p>데일카네기 최고경영자과정 서울90기 수료</p>
+                </div>
+                <div class="certif flex">
+                  <div class="img"><img src="./img/certificate_1_1.jpg"></div>
+                  <div class="img"><img src="./img/certificate_1_2.jpg"></div>
+                  <div class="img"><img src="./img/certificate_1_3.jpg"></div>
+                  <div class="img"><img src="./img/certificate_1_4.jpg"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </section>
+
+        <section class="con6">
+          <div class="wpc flex_hcenter">
+            <div class="left flex_vcenter">
+              <div class="tit mb30">
+                <p>우리의 삶이 통증과 두려움으로부터 벗어나 다시 편안하게 되는 것,</p>
+                <p>연세리안치과가 지향하는 진료의 정신입니다.</p>
+              </div>
+              <h4>Interview<br>Movie</h4>
+            </div>
+            <div class="right">
+              <div class="btnwrap">
+                <button class="btn1">인터뷰영상보기</button>
+                <button class="btn2">약력더보기</button>
+              </div>
+              <div class="thum">
+                <img src="./img/main/main_img02.jpg">
+                <button class="markplay"></button>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="con7 pbt100">
+          <div class="animated-title rollingcustom">
+            <div class="track">
+              <span class="bg-txt">Nowon Yonseirian Dental Clinic</span>
+              <span class="bg-txt">Nowon Yonseirian Dental Clinic</span>
+              <span class="bg-txt">Nowon Yonseirian Dental Clinic</span>
+            </div>
+          </div>
+          <div class="txtwrap wpc">
+            <div class="txt1 mb30">
+              <p>우리는 원래 건강하고 아름답습니다.</p>
+              <p>여러 이유로 건강과 활기를 잃어버린 치아에</p>
+              <p>잘 씹을 수 있는 기능과 아름다운 미소를 회복시켜</p>
+            </div>
+            <div class="txt2">
+              <p><strong>우리의 삶이 통증과 두려움으로부터 벗어나 다시 편안하게 되는 것,</strong></p>
+              <p>연세리안치과가 지향하는 진료의 정신입니다.</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="con8">
+          <div class="wpc">
+            <h3 class="mbcon50">연세리안치과 진료후기</h3>
+            <div class="left flexwrap">
+              <div class="titwrap mbcon50">
+                <h4 class="mb30">Smile & Specialist</h4>
+                <div class="tittxt">
+                  <p>여성원장님의 섬세함으로 환자분들의 상태에 따른 1:1 맞춤 진료를 시행합니다. </p>
+                  <p>연세리안치과를 내원하시는 모든 분들이 밝게 웃고 가실 수 있도록 친절하고 편안한 진료를 드립니다.</p>
+                </div>
+              </div>
+              <div class="slider center slide_d1">
+                <div class="slide_item">
+                  <div class="txt">전악임플란트</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/1.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">네비게이션 임플란트</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/2.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">고난도 뼈이식술</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/3.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">상악동 거상술</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/4.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">치은이식술</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/5.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">라미네이트</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/6.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">올세라믹 크라운</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/7.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">전치부 레진</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/8.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">미백</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/9.jpg"></div>
+                </div>
+                <div class="slide_item">
+                  <div class="txt">발치와 보존술</div>
+                  <div class="imgwrap"><img src="./img/gallery/main//brforeNafter/10.jpg"></div>
+                </div>
+              </div> <!-- slider end  -->
+            </div>
+          </div>
+        </section> 
+
+        <section class="con9">
+          
+        </section>
+
       </div>
       </main>
       <footer id="footer"></footer>
