--- a/sub4.html
+++ b/sub4.html
@@ -133,8 +133,7 @@
                   </div>
                   <div class="col">
                     <h3>전신 질환 악화</h3>
-                    <div class="txt">치주 질환이 심해지면
-                      세균이 혈류를 타고 전신으로 퍼져<span class="subcolor_p">당뇨병 6배, 심혈관질환 2.2배, 혈관성 치매 1.6배, 뇌졸중 2.8배</span> 등 전신 질환을 악화시킬 수 있습니다.</div>
+                    <div class="txt">치주 질환이 심해지면 세균이 혈류를 타고 전신으로 퍼져 <span class="subcolor_p">당뇨병 6배, 심혈관질환 2.2배, 혈관성 치매 1.6배, 뇌졸중 2.8배</span> 등 전신 질환을 악화시킬 수 있습니다.</div>
                   </div>
                   <div class="col">
                     <h3>조기 발견과 치료의 중요</h3>
