메인반응형

--- a/index.html
+++ b/index.html
@@ -33,34 +33,34 @@
         <section class="slidewrap_main con1">
           <div class="slider lazy slider_d2">
             <div>
-              <div><img src="./img/gallery/main/top/1.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/1.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/2.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/2.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/3.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/3.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/4.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/4.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/5.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/5.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/6.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/6.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/7.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/7.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/8.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/8.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/9.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/9.jpg"></div>
             </div>
             <div>
-              <div><img src="./img/gallery/main/top/10.jpg"></div>
+              <div class="imgwrap"><img src="./img/gallery/main/top/10.jpg"></div>
             </div>
           </div>
           <div class="titwrap" id="titwrap">
@@ -385,7 +385,81 @@
         </section> 
 
         <section class="con9">
-          
+          <div class="sign flex_vcenter">
+            <div class="imgwrap"><img src="./img/logo_big.png"></div>
+          </div>
+          <div class="latestwrap column3 wpc gapborder">
+            <div class="col">
+              <div class="latest_tit">공지사항</div>
+              <div class="latest_cont">
+                <!-- 최근게시물 코드대체-->
+                <ul>
+                  <li class="flexspace">
+                    <a href="#">10월 진료일정 안내</a>
+                    <span class="date">2023.09.31</span>
+                  </li>
+                  <li class="flexspace">
+                    <a href="#">10월 진료일정 안내</a>
+                    <span class="date">2023.09.31</span>
+                  </li>
+                  <li class="flexspace">
+                    <a href="#">10월 진료일정 안내</a>
+                    <span class="date">2023.09.31</span>
+                  </li>
+                </ul>
+                <!-- 최근게시물end-->
+              </div>
+            </div>
+            <div class="col">
+              <div class="latest_tit">Q & A</div>
+              <div class="latest_cont">
+                <!-- 최근게시물 코드대체-->
+                <ul>
+                  <li class="flexspace">
+                    <a href="#">10월 진료일정 안내</a>
+                    <span class="date">2023.09.31</span>
+                  </li>
+                  <li class="flexspace">
+                    <a href="#">10월 진료일정 안내</a>
+                    <span class="date">2023.09.31</span>
+                  </li>
+                  <li class="flexspace">
+                    <a href="#">10월 진료일정 안내</a>
+                    <span class="date">2023.09.31</span>
+                  </li>
+                </ul>
+                <!-- 최근게시물end-->
+              </div>
+            </div>
+            <div class="col maparea">
+              <div class="latest_tit">오시는길</div>
+              <div class="latest_cont">
+               <p class="addr mb20">서울특별시 노원구 상계동 730-4, 하나빌딩 8층 (동일로 215길 2)</p>
+               <div class="timearea column2">
+                  <div class="col1">
+                    <div>
+                      <p class="left">Mon / Wed / Thu / Fri</p>
+                      <p class="right">09:30 - 18:30</p>
+                    </div>
+                    <div>
+                      <p class="left">Tue (Night care)</p>
+                      <p class="right">09:30 - 21:00</p>
+                    </div>
+                  </div>
+                  <div class="col2">
+                    <div>
+                      <p class="left">Sat</p>
+                      <p class="right">09:30 - 14:00</p>
+                    </div>
+                    <div>
+                      <p class="left">lunch</p>
+                      <p class="right">13:00 - 14:00</p>
+                    </div>
+                  </div>
+               </div>
+              </div>
+            </div>
+          </div>
         </section>
 
       </div>
