헤더반응형

--- a/sub5.html
+++ b/sub5.html
@@ -30,9 +30,9 @@
         <div class="maintop top_sub5">
           <div class="wpc flexwrap fnlnb">
             <div class="lnbtit flex_hcenter"><h1 class="fnlnbtit"></h1></div>
-            <!-- <div class="lnb">
+            <div class="lnb no"> <!-- lnb사용시 no제거 -->
               <ul class="sub5 fnsubmenu" data-cur="sub5_1"></ul> 
-            </div> -->
+            </div>
           </div>
         </div>
 
