--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <div class="flex">
                     <div class="num">1</div>
                     <div class="flex_vcenter">
-                      <p class="tit">Respect [환자에 대한 존중]</p>
+                      <p class="tit"><span class="engsignB">Respect</span> [환자에 대한 존중]</p>
                       <div class="txt">
                         <p>환자의 건강하고 행복할 권리를 존중합니다. </p>
                         <p>환자분들의 통증과 불편에 귀 기울여, 가장 편안한 방법으로 최선의 결과를 약속드립니다.</p>
@@ -101,7 +101,7 @@
                   <div class="flex">
                     <div class="num">2</div>
                     <div class="flex_vcenter">
-                      <p class="tit">Reliable [ 신뢰 ]</p>
+                      <p class="tit"><span class="engsignB">Reliable</span> [ 신뢰 ]</p>
                       <div class="txt">
                         <p>진료는 환자와 의료진과의 약속입니다.</p>
                         <p>치료는 의료진을 믿는 환자의 마음과 신의를 지키는 의료진의 조화가 가장 중요합니다.</p>
@@ -117,7 +117,7 @@
                       <div class="flex">
                         <div class="num">3</div>
                         <div class="flex_vcenter">
-                          <p class="tit">Reference [ 근거 중심의 진료 ]</p>
+                          <p class="tit"><span class="engsignB">Reference</span> [ 근거 중심의 진료 ]</p>
                           <div class="txt">
                             <p>국내 5% 의 대학 병원 수련과정을 마친 전문의로서, </p>
                             <p>근거 중심의 진료와 검증된 재료, 첨단 진료 장비를 통해 </p>
@@ -132,7 +132,7 @@
                   <div class="flex">
                     <div class="num">4</div>
                     <div class="flex_vcenter">
-                      <p class="tit">Release [ 통증의 완화 ]</p>
+                      <p class="tit"><span class="engsignB">Release</span> [ 통증의 완화 ]</p>
                       <div class="txt">
                         <p>아프고 두려운 치과 치료이기에 연조직 마취제, 무통마취기, 아로마 테라피 등을 </p>
                         <p>이용하여 편안하고 아프지 않은 진료를 제공합니다.</p>
@@ -146,7 +146,7 @@
                       <div class="flex">
                         <div class="num">5</div>
                         <div class="flex_vcenter">
-                          <p class="tit">Return [ 진정한 회복 ]</p>
+                          <p class="tit"><span class="engsignB">Return</span> [ 진정한 회복 ]</p>
                           <div class="txt">
                             <p>치과 치료는 치아로서만 끝나는 것이 아닌, </p>
                             <p>잘 씹고 먹을 수 있는 즐거움, 환하게 웃을 수 있는 자신감, </p>
@@ -197,9 +197,9 @@
               <div class="imgwrap"><img src="./img/main/main_img01_3.jpg" class="scrollon delay1_5"></div>
               <div class="txtwrap subcolor_p">
                 <p class="txt1 mb10"><strong>심미치료</strong> 클리닉</p>
-                <div class="txt2"><p>건강한 잇몸 ( pink esthetic) 위에 손상되고 
-                  변색된 치아를 환하게 복원 (white esthetic) 하여 
-                  당신의 밝은 웃음을 다시 (Re:) 돌려드립니다.</p>
+                <div class="txt2"><p>건강한 잇몸<span class="engsign">(pink esthetic)</span> 위에 손상되고 
+                  변색된 치아를 환하게 복원<span class="engsign">(white esthetic)</span>하여 
+                  당신의 밝은 웃음을 다시 <span class="engsign">(Re:)</span> 돌려드립니다.</p>
                 </div>
               </div>
             </div>
@@ -207,9 +207,9 @@
               <div class="imgwrap"><img src="./img/main/main_img01_4.jpg" class="scrollon delay1_7"></div>
               <div class="txtwrap subcolor_p">
                 <p class="txt1 mb10"><strong>자연치보존</strong> 클리닉</p>
-                <div class="txt2"><p>건강한 잇몸 ( pink esthetic) 위에 손상되고 
-                  변색된 치아를 환하게 복원 (white esthetic) 하여 
-                  당신의 밝은 웃음을 다시 (Re:) 돌려드립니다.</p>
+                <div class="txt2"><p>건강한 잇몸<span class="engsign">(pink esthetic)</span> 위에 손상되고 
+                  변색된 치아를 환하게 복원<span class="engsign">(white esthetic)</span> 하여 
+                  당신의 밝은 웃음을 다시 <span class="engsign">(Re:)</span> 돌려드립니다.</p>
                 </div>
               </div>
             </div>
@@ -266,10 +266,10 @@
                   <p>대한 심미치과학회 정회원</p>
                   <p>대한 턱관절교합학회 교합 아카데미 수료</p>
                   <p>오스템 임플란트 임상지도의</p>
-                  <p>University of Pensylvenia Endodontic Master coursr 수료</p>
-                  <p>Osstem Prothodontic Master course 수료</p>
-                  <p>Kaya 임상 보철 세미나 수료</p>
-                  <p>International Team for lmplantology member</p>
+                  <p><span class="engsign">University of Pensylvenia Endodontic Master course</span> 수료</p>
+                  <p><span class="engsign">Osstem Prothodontic Master course</span> 수료</p>
+                  <p><span class="engsign">Kaya</span> 임상 보철 세미나 수료</p>
+                  <p class="engsign">International Team for lmplantology member</p>
                   <p>데일카네기 최고경영자과정 서울90기 수료</p>
                 </div>
                 <div class="certif flex">
@@ -411,7 +411,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="latest_tit">Q & A</div>
+              <div class="latest_tit engsignM">Q & A</div>
               <div class="latest_cont">
                 <!-- 최근게시물 코드대체-->
                 <ul>
@@ -436,7 +436,7 @@
               <div class="latest_cont">
                <p class="addr mb20">서울특별시 노원구 상계동 730-4, 하나빌딩 8층 (동일로 215길 2)</p>
                <div class="timearea column2">
-                  <div class="col1">
+                  <div class="col1 engsignM">
                     <div>
                       <p class="left">Mon / Wed / Thu / Fri</p>
                       <p class="right">09:30 - 18:30</p>
