--- a/sub1_2.html
+++ b/sub1_2.html
@@ -68,17 +68,17 @@
                     <div class="bot column2">
                       <div class="col content_in">
                         <div>
-                          University of Pensylvenia Endodontic Master coursr 수료<br>
-                          Osstem Prothodontic Master course 수료<br>
-                          Kaya 임상 보철 세미나 수료<br>
-                          International Team for lmplantology member<br>
+                          <span class="engsign">University of Pensylvenia Endodontic Master course</span> 수료<br>
+                          <span class="engsign">Osstem Prothodontic Master course</span> 수료<br>
+                          <span class="engsign">Kaya</span> 임상 보철 세미나 수료<br>
+                          <span class="engsign">International Team for lmplantology member</span><br>
                           데일카네기 최고경영자과정 서울90기 수료
                         </div>
                         <div>
-                          2015년 Osstem Meeting Poster Presentation 최우수상 수상<br>
+                          2015년 <span class="engsign">Osstem Meeting Poster Presentation</span> 최우수상 수상<br>
                           2015년 구강악안면임플란트학회 춘계학술대회 최우수 구연상 수상<br>
                           2016년 공직치과의사회 최우수 구연상 수상<br>
-                          2016년 Shinhung lmplant Dentistry 임상 포스터 우수상 수상
+                          2016년 <span class="engsign">Shinhung lmplant Dentistry</span> 임상 포스터 우수상 수상
                         </div>
                         <div>
                           前) 분당예치과 치주과장 <br>
